fix(global.css): make sure on small devices calendar pickers are taking full-width

--- a/apps/web/src/assets/styles/global.css
+++ b/apps/web/src/assets/styles/global.css
@@ -154,3 +154,9 @@ section:last-child {
 .ant-anchor-wrapper-horizontal .ant-anchor {
     overflow: unset !important;
 }
+
+@media only screen and (max-width: 480px) {
+    .ant-picker-calendar .ant-picker-calendar-header {
+        display: flex !important;
+    }
+}
